--- a/jumana's site.css
+++ b/jumana's site.css
@@ -10,4 +10,4 @@ h1,h3{
     color:#66BFBF;}
 h1{font-family:"Sofia",sans-serif;}
 thead {color: #349f9f;}
-table{color:#E8F9FF;}
+table{background-color:#E8F9FF;}
